{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 26,
  "lineage": "98e9fc51-a365-bd50-e3e7-af70296ded8b",
  "resources": [
    {
      "module": "module.aws_web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-023a307f3d27ea427",
            "arn": "arn:aws:ec2:ap-south-1:354918386970:instance/i-0e7e86213a17710cc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7e86213a17710cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ebfc02970f47f9a4",
            "private_dns": "ip-172-31-11-82.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.82",
            "public_dns": "ec2-52-66-238-225.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.238.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ee0db3fa6cc28618",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nginx-web-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c08d203d3c3a293b",
            "tags": {
              "Name": "aws-nginx"
            },
            "tags_all": {
              "Name": "aws-nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3c4e7c7a1ee9463"
            ]
          },
          "dependencies": [
            "module.aws_web.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:354918386970:security-group/sg-0c3c4e7c7a1ee9463",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3c4e7c7a1ee9463",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-web-sg",
            "name_prefix": "",
            "owner_id": "354918386970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc2b387d210b366"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.gcp_web",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-06T10:15:55.610-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-project-459008/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-459008/global/networks/default",
            "priority": 1000,
            "project": "terraform-project-459008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-459008/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "nginx-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.gcp_web",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-project-459008/zones/us-central1-a/disks/gcp-nginx"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-project-459008/zones/us-central1-a/instances/gcp-nginx",
            "instance_id": "8919839352422923553",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "bVcBc14HBhg=",
            "metadata_startup_script": "#!/bin/bash\r\napt-get update\r\napt-get install -y nginx\r\nsystemctl start nginx\r\n",
            "name": "gcp-nginx",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.171.70.17",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-459008/global/networks/default",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-project-459008/regions/us-central1/subnetworks/default",
                "subnetwork_project": "terraform-project-459008"
              }
            ],
            "project": "terraform-project-459008",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-459008/zones/us-central1-a/instances/gcp-nginx",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nginx-server"
            ],
            "tags_fingerprint": "mVdp3NT8oTk=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    }
  ]
}